Added general utilities to js code and template.

--- a/betterweather/templates/index.html
+++ b/betterweather/templates/index.html
@@ -20,6 +20,9 @@
     </div>
     <div id="forecast"></div>
 </div>
+<div>
+
+</div>
 {% endblock %}
 {% block javascript %}
 <script type="text/javascript">
