--- a/betterweather/templates/template.html
+++ b/betterweather/templates/template.html
@@ -14,5 +14,6 @@
     <script src="{{ url_for('static', filename='js/lib/bootstrap.bundle.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/lib/typeahead.bundle.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/lib/typeahead-address-photon.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/utilities.js') }}"></script>
     {% block javascript %}{% endblock %}
 </html>
