--- a/betterweather/templates/template.html
+++ b/betterweather/templates/template.html
@@ -18,5 +18,6 @@
     <script src="{{ url_for('static', filename='js/typeahead.bundle.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/typeahead-address-photon.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/utilities.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
     {% block javascript %}{% endblock %}
 </html>
