Changed ww codes according to DWD. Added displaying of significant weather and station information.

--- a/betterweather/templates/index.html
+++ b/betterweather/templates/index.html
@@ -26,6 +26,7 @@
         <h3 id="temperature" class="mx-4 text-muted d-inline" style="text-transform: none !important"></h3>
         <h3 id="precipitation" class="mx-4 text-muted d-inline" style="text-transform: none !important"></h3>
         <h3 id="windspeed" class="mx-4 text-muted d-inline" style="text-transform: none !important"></h3>
+        <h5 id="present_weather" class="mx-auto text-muted mt-2"></h5>
     </div>
 
 </div>
