--- a/betterweather/static/css/site.css
+++ b/betterweather/static/css/site.css
@@ -8,6 +8,8 @@
   border-top: 4px solid #FF5722;
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
+  margin-left: auto !important;
+  margin-right: auto !important;
 }
 
 .triple-spinner::before,
@@ -17,6 +19,7 @@
   border-radius: 50%;
   border: 4px solid transparent;
 }
+
 .triple-spinner::before {
   top: 5px;
   left: 5px;
@@ -26,6 +29,7 @@
   -webkit-animation: spin 3s linear infinite;
   animation: spin 3.5s linear infinite;
 }
+
 .triple-spinner::after {
   top: 15px;
   left: 15px;
@@ -36,27 +40,58 @@
   animation: spin 1.75s linear infinite;
 }
 
+.no-transform {
+  text-transform: none !important;
+}
 
+.bw-container .bw-body-c {
+  text-align: center
+}
+
+.bw-body-c div {
+  display: inline !important;
+  text-transform: none !important;
+  letter-spacing: 3px;
+  line-height: 1.2;
+  margin-left: 1.5rem !important;
+  margin-right: 1.5rem !important;
+  margin-bottom: 0.5rem;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+.bw-body-c div.bw-present_weather {
+  display: block !important;
+  text-transform: uppercase;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  margin-block-start: 1.67em;
+  margin-block-end: 1.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
 
 @-webkit-keyframes spin {
-    from {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    to {
-      -webkit-transform: rotate(360deg);
-      transform: rotate(360deg);
-    }
+  from {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
+  to {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
 
 
 @keyframes spin {
-    from {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    to {
-      -webkit-transform: rotate(360deg);
-      transform: rotate(360deg);
-    }
+  from {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
+  to {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
