--- a/betterweather/templates/template.html
+++ b/betterweather/templates/template.html
@@ -9,7 +9,7 @@
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/site.css') }}">
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
             {% block content %}{% endblock %}
         </div>
     </body>
